--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <script src="bower_components/oauth-signature/dist/oauth-signature.js"></script>
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
@@ -41,6 +42,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/clueview1">Clue 1</a></li>
             </ul>
           </div>
         </div>
