--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,8 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL-UYGEWzRM60XecXsh6rUKn4wDOYKIWE&callback=initMap"
+    async defer></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
