--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,8 @@
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
     </div>
+    <div ng-controller="geolocCtrl">
+    </div>
 
 
 
@@ -88,6 +90,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/ngGeolocation/ngGeolocation.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
