--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/ngGeolocation/ngGeolocation.min.js"></script>
+    <script src="bower_components/ngGeolocation/ngGeolocation.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
