--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
               <li><a ng-href="#/clueview1">Clue 1</a></li>
+                <div id="map1"></div>
 
 
               <!--   Facebook Login -->
@@ -50,12 +51,12 @@
 
                 <li><fb:login-button autologoutlink="true"></fb:login-button></li>
 
-               
+
               <!--   Facebook Share -->
 
 
-                <li><div class="fb-share-button" 
-                    data-href="http://www.facebook.com" 
+                <li><div class="fb-share-button"
+                    data-href="http://www.facebook.com"
                     data-layout="button_count">
                     </div></li>
 
@@ -68,6 +69,9 @@
     <div class="container">
       <div ng-controller="geolocCtrl">
           <div id="map"></div>
+
+
+
       </div>
     <div ng-view=""></div>
     </div>
@@ -97,6 +101,8 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+
+
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
 
         <script src="scripts/app.js"></script>
@@ -114,6 +120,11 @@
         <script src="scripts/directives/directives.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL-UYGEWzRM60XecXsh6rUKn4wDOYKIWE&callback=initMap"></script>
         <script src="http://connect.facebook.net/en_US/all.js"></script>
+
+
+
+
+
 
 
 
