--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,6 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
-              <li><a ng-href="#/clueview1">Clue 1</a></li>
               <!--   Facebook Login -->
 
 
@@ -71,7 +70,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from team ButterFly</p>
       </div>
     </div>
 
@@ -119,6 +118,7 @@
 
 
 
+        <script src="scripts/services/googlemapsservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
