--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/ngGeolocation/ngGeolocation.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -118,6 +119,7 @@
         <script src="scripts/services/googlemapsservice.js"></script>
         <script src="scripts/services/pointsservice.js"></script>
 
+        <script src="scripts/controllers/modal.js"></script>
         <!-- endbuild -->
 </body>
 </html>
