--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,13 @@
               <!--   Facebook Login -->
 
 
-                <li><fb:login-button autologoutlink="true"></fb:login-button></li>
+                 <!-- <li><fb:login-button autologoutlink="true"></fb:login-button></li> -->
+
+                <!-- <li>
+                <div class="fb-share-button"
+                data-href="http://www.facebook.com"
+                data-layout="button_count"></div>
+                </li> -->
 
             </ul>
           </div>
