--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Lato:700|PT+Sans+Narrow|Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
@@ -35,7 +36,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">butterflyapp</a>
+            <a class="navbar-brand" href="#/">ButterFly</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -47,16 +48,16 @@
               <!--   Facebook Login -->
 
 
-                <li><fb:login-button autologoutlink="true"></fb:login-button></li>
+                <li><a><fb:login-button autologoutlink="true"></fb:login-button></a></li>
 
 
               <!--   Facebook Share -->
 
 
-                <li><div class="fb-share-button"
+                <li><a><div class="fb-share-button"
                     data-href="http://www.facebook.com"
                     data-layout="button_count">
-                    </div></li>
+                  </div></a></li>
 
             </ul>
           </div>
