--- a/app/index.html
+++ b/app/index.html
@@ -37,12 +37,13 @@
             </button>
 
             <a class="navbar-brand" href="#/">ButterFly</a>
+
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
+              <li><a href="#/">Home</a></li>
               <li><a ng-href="#/about">Team</a></li>
 
               <!--   Facebook Login -->
