fixed facebook http request

--- a/app/index.html
+++ b/app/index.html
@@ -128,7 +128,7 @@
         <script src="scripts/services/facebookapifactory.js"></script>
         <script src="scripts/directives/directives.js"></script>
         <script src="scripts/services/geolocation-service.js"></script>
-        <script src="http://connect.facebook.net/en_US/all.js"></script>
+        <script src="//connect.facebook.net/en_US/all.js"></script>
         <script src="scripts/services/googlemapsservice.js"></script>
         <script src="scripts/controllers/modal.js"></script>
         <!-- endbuild -->
