--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />`
     <script src="bower_components/oauth-signature/dist/oauth-signature.js"></script>
     <script  async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5tSIIIIwNPatlpvr-tn-Ag3DaN29XURw"> </script>
 
