added facebook image

--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />`
+    <meta charset="utf-8">
+
+    <meta property="og:image" content="https://playbutterfly.com/images/facbookimage.png"/>
+    <meta property="og: Play ButterFly!" content="title" />
+    <meta property="og:description" content="A mobile geolocation game." />
     <script src="bower_components/oauth-signature/dist/oauth-signature.js"></script>
     <script  async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5tSIIIIwNPatlpvr-tn-Ag3DaN29XURw"> </script>
+    <link rel="icon" type="image/png" href="images/butterflymain.png" />
 
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
+    <title>Butterfly</title>
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) scsss/vendor.css -->
